# Clasp

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  ast_test.cpp  ast_visitor.cpp  build.bat  build.sh  cclasp.cpp  clasp.cpp  clasp_ast.cpp  dependency_graph.py  directive.cpp  get_type.cpp  install_manifest.txt  lexer.cpp  lines.sh  package-lock.json  package.json  parser.cpp  printer.cbt  test.csp
cvm/: main.py  write_bin.py
example/: example-target.cbt
inc/clasp/: ast.hpp  exception.hpp  expr.hpp  int_rep.hpp  lexer.hpp  lexical.hpp  log.hpp  parser.hpp  target.hpp  type.hpp  util.hpp
include/clasp/: ast.h  ast.hpp  clasp.h  err.h  fstream.h  lexer.h  parser.h  print_ast.h  sc_array.h  scanner.hpp  stringstream.h  target.h  variable.h  visitor.h
include/sheredom-hashmap/: hashmap.h
run/: clasp.c  clasp.cpp  test_lexer.cpp
spec/: bytecode.md  lexical.md  precedence.md  syntax.md  target.md
src/: _.cpp  ast.c  err.c  expr.cpp  expression.cpp  int_rep.cpp  lexer.c  lexer.cpp  lexical.cpp  log.cpp  parser.c  parser.cpp  print_ast.c  scanner.cpp  stream.c  stringstream.c  target.c  target.cpp  util.cpp
stuff/: BP.java
stuff/ast/: Expression.java
stuff/clstd/: string.csp
stuff/myApp/: README.md
stuff/myApp/src/: main.csp  other_file.csp
test/: test_lexer.cpp  test_parser.cpp  test_target.cpp
tests/: dll_test.c  dll_test_lib.c  lexer_test.c  parser_test.c  ss_test.c
util/: make_target.py  make_target_cl.py
warns/: syntax_warnings.txt
